--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro Simples</title>
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <div id="app">
@@ -27,6 +27,11 @@
             name="email"
             class="input-especial"
             required
+          />
+          <label for="senha">Senha:</label>
+          <input
+            type
+          
           />
 
           <button type="submit" class="gradiente-animado">Cadastrar</button>
